--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -554,26 +554,26 @@ La Tabla \ref{fig:cinco_educ_pol} muestra los resultados al usar los Cinco Grand
 						\begin{threeparttable}
 							\caption{Los Cinco Grandes y otras características personales}
 							\label{fig:cinco_educ_pol}
-						\begin{tabular}{lSSSSSS}
+						\begin{tabular}{lSSSSS}
 							\hline \hline
-							&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}\\
-							&\multicolumn{1}{c}{Educación}&\multicolumn{1}{c}{Derecha}&\multicolumn{1}{c}{Centro}&\multicolumn{1}{c}{Izquierda}&\multicolumn{1}{c}{Casado}&\multicolumn{1}{c}{Demandas}\\
+							&\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}\\
+							&\multicolumn{1}{c}{Educación}&\multicolumn{1}{c}{Derecha}&\multicolumn{1}{c}{Izquierda}&\multicolumn{1}{c}{Casado}&\multicolumn{1}{c}{Demandas}\\
 							\midrule
-						Extraversión        &      -0.176         &      -0.591         &      -0.311         &      -0.669         &       0.545         &       0.254         \\
-						&     (0.344)         &     (0.473)         &     (0.740)         &     (0.477)         &     (0.711)         &     (0.579)         \\
-						Inestabilidad emocional&       0.051         &      -0.490         &       0.533         &       0.320         &      -1.429\sym{***}&       1.461\sym{***}\\
-						&     (0.240)         &     (0.327)         &     (0.561)         &     (0.325)         &     (0.506)         &     (0.425)         \\
-						Amabilidad          &      -0.044         &       0.019         &       1.105         &      -0.159         &      -1.633         &      -0.187         \\
-						&     (0.591)         &     (0.811)         &     (1.061)         &     (0.762)         &     (1.246)         &     (0.905)         \\
-						Responsabilidad     &       1.125\sym{**} &       1.258\sym{*}  &      -0.369         &      -0.078         &       1.052         &      -1.351         \\
-						&     (0.510)         &     (0.710)         &     (1.082)         &     (0.674)         &     (1.096)         &     (0.842)         \\
-						Apertura al cambio  &      -0.092         &      -0.958\sym{**} &       1.849\sym{***}&      -0.115         &       0.244         &       0.454         \\
-						&     (0.351)         &     (0.470)         &     (0.717)         &     (0.454)         &     (0.719)         &     (0.562)         \\
-						%Constante            &       1.690         &       2.576         &     -15.290\sym{**} &       2.951         &       6.806         &      -3.291         \\
-						%&     (3.683)         &     (4.988)         &     (7.565)         &     (4.900)         &     (7.036)         &     (5.849)         \\
+						Extraversión        &      -0.176         &      -0.591         &      -0.669         &       0.545         &       0.254         \\
+						&     (0.344)         &     (0.473)         &     (0.477)         &     (0.711)         &     (0.579)         \\
+						Inestabilidad emocional&       0.051         &      -0.490         &       0.320         &      -1.429\sym{***}&       1.461\sym{***}\\
+						&     (0.240)         &     (0.327)         &     (0.325)         &     (0.506)         &     (0.425)         \\
+						Amabilidad          &      -0.044         &       0.019         &      -0.159         &      -1.633         &      -0.187         \\
+						&     (0.591)         &     (0.811)         &     (0.762)         &     (1.246)         &     (0.905)         \\
+						Responsabilidad     &       1.125\sym{**} &       1.258\sym{*}  &      -0.078         &       1.052         &      -1.351         \\
+						&     (0.510)         &     (0.710)         &     (0.674)         &     (1.096)         &     (0.842)         \\
+						Apertura al cambio  &      -0.092         &      -0.958\sym{**} &      -0.115         &       0.244         &       0.454         \\
+						&     (0.351)         &     (0.470)         &     (0.454)         &     (0.719)         &     (0.562)         \\
+						%Constant            &       1.690         &       2.576         &       2.951         &       6.806         &      -3.291         \\
+						%&     (3.683)         &     (4.988)         &     (4.900)         &     (7.036)         &     (5.849)         \\
 						\midrule
-						R-squared           &       0.042         &       \multicolumn{1}{c}{-}              &         \multicolumn{1}{c}{-}            &           \multicolumn{1}{c}{-}          &            \multicolumn{1}{c}{-}         &           \multicolumn{1}{c}{-}          \\
-						N                   &        \multicolumn{1}{c}{ 176}         &          \multicolumn{1}{c}{184}         &          \multicolumn{1}{c}{184}         &          \multicolumn{1}{c}{184}         &          \multicolumn{1}{c}{178}         &          \multicolumn{1}{c}{175}         \\
+						R-squared           &       0.042         &                     &                     &                     &                     \\
+						N                   &         \multicolumn{1}{c}{176}         &         \multicolumn{1}{c}{184}         &         \multicolumn{1}{c}{184}         &         \multicolumn{1}{c}{178}         &         \multicolumn{1}{c}{175}         \\
 							\hline \hline
 						\end{tabular}
 					\begin{tablenotes}
@@ -586,11 +586,14 @@ La Tabla \ref{fig:cinco_educ_pol} muestra los resultados al usar los Cinco Grand
 
 La columna (1) muestra la relación entre los Cinco Grandes y el nivel educacional alcanzando por los líderes. Se observa que el único factor que tiene un efecto estadísticamente significativo es responsabilidad. Este resultado es consistente con lo que indica la literatura. En efecto, \citeA{o2007big} señalan que el factor responsabilidad en particular es el más fuerte y consistentemente asociado a éxito académico. Además, en múltiples estudios este factor ha sido usado para predecir logros académicos \cite{Noftle2007,de1996personality} y alcance educacional \cite{Shiner2002}.   
 
-Las columnas (2), (3) y (4) muestran la relación entre los Cinco Grandes y la tendencia política del partido de los líderes. Los resultados de la columna (2) muestran que la pertenencia a un partido de derecha se relaciona positivamente con el factor responsabilidad y negativamente con el factor apertura al cambio. Para los otros factores de personalidad no se encontró un efecto estadísticamente significativo. Estos resultados van en la línea de otros trabajos que reportan una asociación entre conservadurismo y responsabilidad y entre liberalismo y apertura al cambio \cite{Carney2008,Gerber2010}. Por un lado, individuos con un alto grado de apertura al cambio tienen respuestas positivas ante nuevos estímulos, por lo que estos individuos responden más favorablemente a políticas sociales liberales. Por otro lado, individuos con alto grado de responsabilidad son más apegados al cumplimiento de las normas sociales, por lo que son más propensos a rechazar políticas sociales liberales \cite{Gerber2011}. 
+Las columnas (2) y (3) muestran la relación entre los Cinco Grandes y la tendencia política del partido de los líderes. Los resultados de la columna (2) muestran que la pertenencia a un partido de derecha se relaciona positivamente con el factor responsabilidad y negativamente con el factor apertura al cambio. Para los otros factores de personalidad no se encontró un efecto estadísticamente significativo. Estos resultados van en la línea de otros trabajos que reportan una asociación entre conservadurismo y responsabilidad y entre liberalismo y apertura al cambio \cite{Carney2008,Gerber2010}. Por un lado, individuos con un alto grado de apertura al cambio tienen respuestas positivas ante nuevos estímulos, por lo que estos individuos responden más favorablemente a políticas sociales liberales. Por otro lado, individuos con alto grado de responsabilidad son más apegados al cumplimiento de las normas sociales, por lo que son más propensos a rechazar políticas sociales liberales \cite{Gerber2011}. Sin embargo, como se muestra en la columna (3), no se encontró una relación estadísticamente significativa entre los Cinco Grandes y el pertenecer a un partido de izquierda. 
 
-(3) Por explicar ... y (4) también...
+La columna (4) muestra la relación obtenida entre los Cinco Grandes y el estatus de estar casado. El factor inestabilidad emocional resulta ser el único con un efecto estadísticamente significativo. Este efecto negativo es consistente con estudios que analizan la relación entre los Cinco Grandes y la calidad de las relaciones en pareja \cite{Soldz1999,White2004,Donnellan2004}. Estos trabajos reportan que individuos más emocionalmente inestables llevan matrimonios menos satisfactorios y por lo tanto serían más propensos a divorciarse.
 
+Por último, la columna (5) reporta la relación entre los Cinco Grandes y la variable `demandas'. Esta variable indica si el individuo fue objeto de alguna acción legal en su contra. El factor inestabilidad emocional es altamente significativo, mientras que responsabilidad está muy cerca de serlo (valor $p=0.108$). 
+La probabilidad de haber sido objeto de alguna acción legal es mayor para aquellos individuos de la muestra que son más emocionalmente inestables y menos responsables. Ambos factores han sido reportados como influyentes en la propensión a tener conductas agresivas, irresponsables o delictuales tales como comportamiento poco ético entre estudiantes (plagio, falsificación, etc.) \cite{Karim2009}, conducción irresponsable \cite{Dahlen2006}, agresión de la pareja \cite{Hines2008} y acoso sexual y violación \cite{Voller2010}.
 
+Se observa en general que la relación entre los Cinco Grandes y otras características personales es consistente con lo que se reporta en la literatura. No solo se obtuvieron relaciones estadísticamente significativas, sino que además estas relaciones van en la dirección esperada. Estos resultados entregan mayor confiabilidad a los estimadores obtenidos.
 
 \subsubsection{Robustez de los estimadores}
 \subsubsection{Indicadores lingüísticos}
