--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -616,4 +616,123 @@
 	volume = {104},
 	year = {2010}
 }
+@article{Soldz1999,
+	abstract = {One hundred sixty-three men who have been followed prospectively for over 45 years were rated on a set of 25 personality traits at the end of their college careers and took the NEO-PI at approximately ages 67–68. The college traits were transformed, via a rating procedure, to scales assessing each of the Big Five dimensions and related to the NEO-PI. Three traits—Neuroticism, Extraversion, and Openness—exhibited significant correlations across the 45-year interval. Furthermore, the trait profiles remained relatively stable over that interval. Both sets of personality traits were related to a wide variety of life course variables representing the domains of global adult adjustment, career functioning/success, creativity, social relations, mental health, substance abuse, childhood characteristics, familial history of pathology, maturity of defenses, and political attitudes. Conscientiousness in college was the best predictor of what happened to the men in the future, whereas Neuroticism in late midlife was the best correlate of life course functioning across a variety of domains.},
+	author = {Soldz, Stephen and Vaillant, George E.},
+	doi = {10.1006/jrpe.1999.2243},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/life course.pdf:pdf},
+	isbn = {0092-6566},
+	issn = {00926566},
+	journal = {Journal of Research in Personality},
+	mendeley-groups = {Personality},
+	number = {2},
+	pages = {208--232},
+	title = {{The Big Five Personality Traits and the Life Course: A 45-Year Longitudinal Study}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0092656699922432},
+	volume = {33},
+	year = {1999}
+}
+@article{White2004,
+	abstract = {Associations between the personality variables of the five-factor model and close relationship variables (love styles, relationship satisfaction, and intimacy) were explored. Participants (N=196) from committed relationships were administered the NEO Personality Inventory-Revised, the Love Attitudes Scale-Short Form, the Relationship Assessment Scale, the Personal Assessment of Intimacy in Relationships, and a demographic questionnaire. Correlation and regression analyses revealed that neuroticism was negatively associated with and predictive of satisfaction and intimacy. The association between neuroticism and relationship satisfaction was completely mediated by possessive, dependent love for females. Extraversion and agreeableness were positively associated with relationship satisfaction and intimacy, especially for males. Conscientiousness was positively correlated with intimacy for males. Implications of these findings are discussed. ?? 2004 Elsevier Ltd. All rights reserved.},
+	author = {White, Jason K. and Hendrick, Susan S. and Hendrick, Clyde},
+	doi = {10.1016/j.paid.2004.02.019},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/relationship contructs.pdf:pdf},
+	isbn = {0191-8869},
+	issn = {01918869},
+	journal = {Personality and Individual Differences},
+	keywords = {Five factor,Intimacy,Love styles,Personality,Relationship satisfaction},
+	mendeley-groups = {Personality},
+	number = {7},
+	pages = {1519--1530},
+	pmid = {4591},
+	title = {{Big five personality variables and relationship constructs}},
+	volume = {37},
+	year = {2004}
+}
+@article{Donnellan2004,
+	abstract = {The present investigation tested the relations between the Big Five dimensions of personality and the marital relationships of over 400 couples using both observational and questionnaire data. Four major findings emerged from these analyses. First, self-reports of neuroticism were positively correlated with negative interactions and negatively correlated with global evaluations of the marriage. Second, self-reports of agreeableness were negatively correlated with negative interactions and generally positively correlated with global evaluations of the marriage. Third, self-reports of openness were negatively correlated with observer reports of negative interactions. Fourth, self-reports of openness by wives were positively correlated with global reports of sexual satisfaction. These findings suggest that agreeableness and openness deserve increased attention as significant correlates of close relationships. Discussion emphasizes the importance of intrapersonal factors for understanding marital relationships. ?? 2004 Elsevier Inc. All rights reserved.},
+	author = {Donnellan, M. Brent and Conger, Rand D. and Bryant, Chalandra M.},
+	doi = {10.1016/j.jrp.2004.01.001},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/enduring marriages.pdf:pdf},
+	isbn = {0092-6566},
+	issn = {00926566},
+	journal = {Journal of Research in Personality},
+	keywords = {Big five,Close relationships,Marital interaction,Marriage,Personality},
+	mendeley-groups = {Personality},
+	number = {5},
+	pages = {481--504},
+	title = {{The Big Five and enduring marriages}},
+	volume = {38},
+	year = {2004}
+}
+@article{Voller2010,
+	abstract = {A sample of 521 college men completed the Revised NEO Personality Inventory and an expanded version of the Sexual Experiences Survey to examine whether variation in the Big Five personality traits in a normal, college population provides any insight into the nature of sexual assault and rape perpetrators. Rape perpetrators reported lower levels of Agreeableness and Conscientiousness when compared to both sexual assault perpetrators and nonperpetrators, and lower levels of Extraversion when compared to nonperpetrators. Rape perpetrators also endorsed lower levels of tendermindedness, excitement-seeking, warmth, positive emotions, feelings, altruism, competence, and dutifulness, and higher levels of vulnerability. Contrary to expectation, overall personality profiles followed remarkably comparable patterns for sexual assault and nonperpetrators, suggesting that sexual assault perpetrators were more similar to nonperpetrators than to rape perpetrators. Findings suggest that individuals who perpetrate sexual offenses, particularly rape, differ from nonperpetrators on dimensions of normal personality. Clinical and research implications are discussed.},
+	author = {Voller, Emily K and Long, Patricia J},
+	doi = {10.1177/0886260509334390},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/sexual assault.pdf:pdf},
+	isbn = {0886-2605},
+	issn = {1552-6518},
+	journal = {Journal of Interpersonal Violence},
+	keywords = {five-factor model,perpetration,personality,rape,sexual assault},
+	mendeley-groups = {Personality},
+	number = {3},
+	pages = {457--480},
+	pmid = {19443734},
+	title = {{Sexual Assault and Rape Perpetration by College Men}},
+	url = {http://jiv.sagepub.com/content/25/3/457.abstract},
+	volume = {25},
+	year = {2010}
+}
+@article{Hines2008,
+	abstract = {Although personality is shown to predict negative relationship experiences, few researchers have used a structural model of personality to study the ways that personality contributes to intimate partner aggression (IPA). This study investigates the five-factor model of personality and its associations with both the use and receipt of psychological, physical, and sexual IPA in 179 men and 301 women. Each of the five factors of personality was associated with at least one type of IPA perpetration or victimization. The dimensions of neuroticism and agreeableness were the strongest predictors of IPA particularly for women. Results are discussed in terms of why personality should be considered as a predictor for both the use and receipt of IPA, why sex differences emerged, and future research that should be conducted.},
+	author = {Hines, Denise A. and Saudino, Kimberly J.},
+	doi = {10.1002/ab.20277},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/intimate partner agression.pdf:pdf},
+	isbn = {1098-2337 (Electronic)$\backslash$n0096-140X (Linking)},
+	issn = {0096140X},
+	journal = {Aggressive Behavior},
+	keywords = {Big five,Intimate partner aggression,Personality,Physical abuse,Sex differences},
+	mendeley-groups = {Personality},
+	number = {6},
+	pages = {593--604},
+	pmid = {18663724},
+	title = {{Personality and intimate partner aggression in dating relationships: The role of the ``big five''}},
+	volume = {34},
+	year = {2008}
+}
+@article{Dahlen2006,
+	abstract = {Despite a wealth of literature supporting the utility of trait driving anger, sensation seeking, and the Big Five personality factors in predicting unsafe driving behavior and crash-related outcomes, these predictors have been studied in isolation. The present study investigated the utility of combining these variables in the prediction of self-reported driving anger expression and the frequency of aggressive and risky driving behaviors. Three hundred and fifteen college students completed measures of driving anger, sensation seeking, Big Five personality factors, unsafe driving behavior, and driving anger expression. Hierarchical regressions controlling respondent age, gender, and average weekly miles driven supported the predictive utility of driving anger, sensation seeking, emotional stability, agreeableness, and openness to experience. Results supported the use of multiple predictors in the study of unsafe driving and demonstrated that different combinations of predictors are needed to explain different aspects of driving behavior. ?? 2006 Elsevier Ltd. All rights reserved.},
+	author = {Dahlen, Eric R. and White, Roy P.},
+	doi = {10.1016/j.paid.2006.03.016},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/unsafe driving.pdf:pdf},
+	isbn = {01918869},
+	issn = {01918869},
+	journal = {Personality and Individual Differences},
+	keywords = {Aggressive driving,Anger,Personality,Sensation seeking},
+	mendeley-groups = {Personality},
+	number = {5},
+	pages = {903--915},
+	title = {{The Big Five factors, sensation seeking, and driving anger in the prediction of unsafe driving}},
+	volume = {41},
+	year = {2006}
+}
+@article{Karim2009,
+	abstract = {The widespread use of the Internet and the convenient mechanism it provides, such as easy access, easy downloads, and easy copy and paste functions have made many types of unethical behaviors easier, particularly those involving students in academic settings. Among the issues in ethics within the academic environment that can be triggered by the Internet are fraudulence, plagiarism, falsification, delinquency, unauthorized help, and facility misuse. Given these issues, the study seeks to investigate the extent to which students at a public university in Malaysia engage in such unethical behavior and their relationship with the big five personality model. This study was conducted using a survey method of 252 students in three different academic faculties. The results of factor analyses confirm and refine the reliability of the scales for both big five personality variables and unethical Internet behaviors as conceptualized through Internet triggered academic dishonesty (ITADS). The findings indicate that personality traits such as (1) agreeableness, (2) conscientiousness and (3) emotional stability are significantly and negatively correlated with unethical Internet behavior in university students. Significant differences in facility misuse are also observed between the three academic faculties investigated. This research should provide significant contributions to educators in designing the computer ethics curriculum and in allowing for educational institutions as well as other organizations in developing relevant policies and guidelines on matters pertaining to academic conduct, utilization of computers and Internet, and recruitment exercises. ?? 2009 Elsevier Ltd. All rights reserved.},
+	author = {Karim, Nor Shahriza Abdul and Zamzuri, Nurul Hidayah Ahmad and Nor, Yakinah Muhamad},
+	doi = {10.1016/j.compedu.2009.01.001},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/internet ethics.pdf:pdf},
+	isbn = {0360-1315},
+	issn = {03601315},
+	journal = {Computers and Education},
+	keywords = {Applications in subject areas,Cross-cultural projects,Higher education,Human-computer interface,Interdisciplinary projects,Media in education},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {86--93},
+	publisher = {Elsevier Ltd},
+	title = {{Exploring the relationship between Internet ethics in university students and the big five model of personality}},
+	url = {http://dx.doi.org/10.1016/j.compedu.2009.01.001},
+	volume = {53},
+	year = {2009}
+}
+
 
