--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -734,5 +734,84 @@
 	volume = {53},
 	year = {2009}
 }
+@article{Baier2007,
+	abstract = {For over 40??years, the gravity equation has been a workhorse for cross-country empirical analyses of international trade flows and - in particular - the effects of free trade agreements (FTAs) on trade flows. However, the gravity equation is subject to the same econometric critique as earlier cross-industry studies of U.S. tariff and nontariff barriers and U.S. multilateral imports: trade policy is not an exogenous variable. We address econometrically the endogeneity of FTAs. Although instrumental-variable and control-function approaches do not adjust for endogeneity well, a panel approach does. Accounting econometrically for the FTA variable's endogeneity yields striking empirical results: the effect of FTAs on trade flows is quintupled. We find that, on average, an FTA approximately doubles two members' bilateral trade after 10??years. ?? 2006 Elsevier B.V. All rights reserved.},
+	author = {Baier, Scott L. and Bergstrand, Jeffrey H.},
+	doi = {10.1016/j.jinteco.2006.02.005},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Trade/do free trade agreements.pdf:pdf},
+	isbn = {0022-1996},
+	issn = {00221996},
+	journal = {Journal of International Economics},
+	keywords = {Free trade agreements,Gravity equation,International trade flows},
+	mendeley-groups = {Economic growth},
+	number = {1},
+	pages = {72--95},
+	title = {{Do free trade agreements actually increase members' international trade?}},
+	volume = {71},
+	year = {2007}
+}
 
+@article{Baier2009,
+	abstract = {This paper provides the first cross-section estimates of long-run treatment effects of free trade agreements on members' bilateral international trade flows using (nonparametric) matching econometrics. Our nonparametric cross-section estimates of ex post long-run treatment effects are much more stable across years and have more economically plausible values than corresponding OLS cross-section estimates from typical gravity equations. We provide plausible estimates of the long-run effects of membership in the original European Economic Community (EEC) and the Central American Common Market (CACM) between 1960 and 2000 and the estimates confirm anecdotal reports of these agreements' effectiveness. ?? 2008 Elsevier B.V. All rights reserved.},
+	author = {Baier, Scott L. and Bergstrand, Jeffrey H.},
+	doi = {10.1016/j.jinteco.2008.09.006},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Trade/Estimating the effects of free trade agreements on international trade.pdf:pdf},
+	isbn = {0022-1996},
+	issn = {00221996},
+	journal = {Journal of International Economics},
+	keywords = {Free trade agreements,International trade flows,Matching econometrics,Treatment effects},
+	mendeley-groups = {Economic growth},
+	number = {1},
+	pages = {63--76},
+	publisher = {Elsevier B.V.},
+	title = {{Estimating the effects of free trade agreements on international trade flows using matching econometrics}},
+	url = {http://dx.doi.org/10.1016/j.jinteco.2008.09.006},
+	volume = {77},
+	year = {2009}
+}
+@article{Etheredge,
+	author = {Etheredge, Lloyd},
+	file = {:C$\backslash$:/Users/Rob/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Etheredge - Unknown - Personality Effects on American Foreign Policy, 1898-1968 A Test of Interpersonal Generalization Theory.pdf:pdf},
+	journal = {American Political Science Review},
+	mendeley-groups = {Personality},
+	number = {02},
+	pages = {434--451},
+	title = {{Personality Effects on American Foreign Policy, 1898-1968: A Test of Interpersonal Generalization Theory}},
+	volume = {72},
+	year = {1978}
+}
+@article{Crichlow2002,
+	abstract = {The determinants of congressional voting behavior on trade matters from 1991 to 1996 are investigated. Three personal characteristics of members of Congress—level of distrust toward others, perception of their control over their environment, and level of cognitive complexity—are examined for effect on voting patterns on proposals to lower barriers to international trade. These personality factors are included in a comprehensive model of congressional voting behavior. Results show that these variables had significant effects on specific trade votes, controlling for the impact of members' party, ideology, support for the presidency, and the nature of their district's workforce. These findings show that the personality attributes of legislators may have an important influence on their voting behavior, particularly on matters involving international cooperation.},
+	author = {Crichlow, S.},
+	doi = {10.1177/002200202236170},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Legislators personality traits free trade.pdf:pdf},
+	isbn = {0022002022361},
+	issn = {0022-0027},
+	journal = {Journal of Conflict Resolution},
+	mendeley-groups = {Personality},
+	number = {5},
+	pages = {693--711},
+	title = {{Legislators' Personality Traits and Congressional Support for Free Trade}},
+	url = {http://www.voxeurop.eu/nl/content/article/4015361-vrijhandelszone-de-voors-en-tegens},
+	volume = {46},
+	year = {2002}
+}
+
+@article{Hermann1980,
+	abstract = {Do the personal characteristics of political leaders affect their governments' foreign policy behavior? The present study examines the impact of 6 personal characteristics of 45 heads of government on the foreign policy behavior of their nations. These characteristics, each of individual interest, interrelate to form two orientations to foreign affairs, and the influence of these orientations on foreign policy behavior is also explored. The results are reported for all 45 heads of government, as well as for those leaders among the 45 with high or low interest in foreign affairs and with little or much training in foreign affairs.},
+	author = {Hermann, Margaret G},
+	doi = {10.2307/2600126},
+	file = {:C$\backslash$:/Users/Rob/Google Drive/Memoria/Documentos/Papers/Personality/Hermann 1980.pdf:pdf},
+	isbn = {00208833},
+	issn = {00208833},
+	journal = {International Studies Quarterly},
+	keywords = {*file import 10 03 07,leadership},
+	mendeley-groups = {Personality},
+	number = {1},
+	pages = {7--46},
+	title = {{Explaining Foreign Policy Behavior Using the Personal Characteristics of Political Leaders}},
+	url = {http://www.jstor.org/stable/2600126?origin=crossref},
+	volume = {24},
+	year = {1980}
+}
 
